# src/main/java/com/pmonteiro/dropwizard/resources/TasksResource.java
@@ -6,6 +6,7 @@ import com.google.inject.Inject;
 import com.google.inject.persist.Transactional;
 import com.pmonteiro.dropwizard.core.Task;
 import com.pmonteiro.dropwizard.dao.TaskDAO;
+import io.swagger.annotations.*;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -17,6 +18,7 @@ import static javax.ws.rs.core.Response.Status.CREATED;
 import static javax.ws.rs.core.Response.Status.NOT_FOUND;
 import static javax.ws.rs.core.Response.*;
 
+@Api("/")
 @Path("tasks")
 @Produces(APPLICATION_JSON)
 public class TasksResource {
@@ -31,6 +33,10 @@ public class TasksResource {
 
     @GET
     @Timed
+    @ApiOperation(
+            value = "Get all the tasks",
+            notes = "Returns all the tasks save on the database")
+    @ApiResponses(value = { @ApiResponse(code = 200, message = "", responseContainer = "List", response = Task.class)})
     public Response getTasks() {
         return ok().entity(ImmutableMap.of("tasks", dao.find(Task.class))).build();
     }
@@ -38,7 +44,13 @@ public class TasksResource {
     @GET
     @Path("/{taskId}")
     @Timed
-    public Response getTask(@PathParam("taskId") Long id) {
+    @ApiOperation(
+            value = "Get task by id",
+            notes = "Returns task by Id. If it does not exist it will return a HTTP 404")
+    @ApiResponses(value = {
+        @ApiResponse(code = 200, message = "", response = Task.class),
+        @ApiResponse(code = 404, message = "Not Found")})
+    public Response getTask(@ApiParam(value = "taskId", example = "1") @PathParam("taskId") Long id) {
         return dao.findById(id)
                 .map(task -> ok().entity(task).build())
                 .orElse(status(NOT_FOUND.getStatusCode()).build());
@@ -47,7 +59,12 @@ public class TasksResource {
     @POST
     @Timed
     @Consumes(APPLICATION_JSON)
-    public Response create(Task task) {
+    @ApiOperation(
+            value = "Creates a new task",
+            notes = "Creates a new task. Task descriptions are not unique.")
+    @ApiResponses(value = {
+            @ApiResponse(code = 201, message = "Created", response = Task.class)})
+    public Response create(@ApiParam(value = "payload", required = true) Task task) {
         dao.persist(task);
         return status(CREATED).entity(task).build();
     }
@@ -56,7 +73,14 @@ public class TasksResource {
     @Path("{taskId}")
     @Timed
     @Consumes(APPLICATION_JSON)
-    public Response update(@PathParam("taskId") Long id, Task task) {
+    @ApiOperation(
+            value = "Updates task by id",
+            notes = "Updates a task description if available in the database")
+    @ApiResponses(value = {
+            @ApiResponse(code = 200, message = "Updated"),
+            @ApiResponse(code = 404, message = "Not Found")})
+    public Response update(@ApiParam(value = "taskId", example = "1") @PathParam("taskId") Long id,
+                           @ApiParam(value = "payload", required = true) Task task) {
         return dao.update(task, id)
                 .filter(updatedRows ->  updatedRows == 1)
                 .map(updated -> ok().build())
@@ -68,7 +92,14 @@ public class TasksResource {
     @Timed
     @Consumes(APPLICATION_JSON)
     @Transactional
-    public Response delete(@PathParam("taskId") Long id) {
+    @ApiOperation(
+            value = "Deletes task by id",
+            notes = "Deletes a if available in the database")
+    @ApiResponses(value = {
+            @ApiResponse(code = 204, message = "No Content"),
+            @ApiResponse(code = 404, message = "Not Found")})
+
+    public Response delete(@ApiParam(value = "taskId", example = "1") @PathParam("taskId") Long id) {
         return dao.findById(id)
                 .map(task -> {
                     dao.remove(task);
